--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ node_modules
 dist
 dist-ssr
 *.local
-
+.next
+out
+dist
+node_modules
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
