--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,8 @@ on:
   push:
     branches: [ main ]
 permissions:
-  contents: write
+  contents: write   # allow pushing a branch
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,8 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with:
-          node-version: 20
+        with: { node-version: 20 }
       - run: npm ci
       - run: npx next build
       - run: npx next export
@@ -23,3 +23,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./out
+          publish_branch: gh-pages     # <- be explicit
+          force_orphan: true           # <- create the branch if missing
