--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,19 +1,18 @@
 ﻿name: Deploy Next.js to GitHub Pages
 on:
   push:
-    branches: [ main ]
+    branches: [ main ]         # deploy whenever you push to main
 permissions:
   contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      GITHUB_PAGES: true
+      GITHUB_PAGES: true       # your next.config.js key
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with:
-          node-version: 20
+        with: { node-version: 20 }
       - run: npm ci
       - run: npx next build
       - run: npx next export
